--- a/themes/hugo-creative-portfolio-theme/layouts/projects/list.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/projects/list.html
@@ -36,7 +36,8 @@
                       <p class="intro">
                        {{ if .Description }}
                           {{ .Description }}
-                      {{ end }}</p>
+                          {{ end }}
+                      </p>
                   </div>
               </div>
           </section>
