--- a/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -1,6 +1,10 @@
 <div id="sidebar" class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
   <div class="sidebar-content">
     <h1 class="sidebar-heading"><a href="/">{{ .Site.Title }}</a></h1>
+    <center>
+        <img src="/img/self-portrait.png" style="width:70%">
+    </center>
+    <p></p>
     {{ range .Site.Params.sidebarAbout }}
       <p class="sidebar-p">{{ . | safeHTML }}</p>
     {{ end }}
